--- a/_config.yml
+++ b/_config.yml
@@ -90,7 +90,7 @@ pagination:
 
 ### Phantom settings
 footer_text: '© 2018 Jami Gibbs'
-admin_name: 'Jami Gibbs'
+admin_name: '백동현'
 google_analytics: "UA-9999999-99" # Update with your own tracking ID
 enable_contact: false
 
