--- a/_config.yml
+++ b/_config.yml
@@ -13,14 +13,14 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: "Hello. I'm Jami Gibbs."
-email: 'jami0821@gmail.com'
-description: "I'm a software developer and designer from Chicago creating useful things for the web."
+title: "Hello. I'm Jami dong hyun."
+email: 'qeg2@naver.com'
+description: "현재 멀티캠퍼스 웹개발 풀스택 과정을 이수중에 있습니다.."
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://jamigibbs.github.io/phantom" # the base hostname & protocol for your site, e.g. https://example.com
-twitter_username: 'jamigibbs'
-github_username: 'jamigibbs'
-medium_username: 'blog.jamigibbs.com'
+url: "https://qorehdgus.github.io" # the base hostname & protocol for your site, e.g. https://example.com
+twitter_username: ''
+github_username: 'qorehdgus'
+medium_username: ''
 
 # Build settings
 markdown: kramdown
