--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: "Hello. I'm Jami dong hyun."
+title: "Hello. I'm dong hyun."
 email: 'qeg2@naver.com'
 description: "현재 멀티캠퍼스 웹개발 풀스택 과정을 이수중에 있습니다.."
 baseurl: "" # the subpath of your site, e.g. /blog
@@ -89,8 +89,8 @@ pagination:
 ############################################################
 
 ### Phantom settings
-footer_text: '© 2018 Jami Gibbs'
-admin_name: '백동현'
+footer_text: '© 2022 dong hyun BAEK'
+admin_name: 'dong hyun'
 google_analytics: "UA-9999999-99" # Update with your own tracking ID
 enable_contact: false
 
